<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.ForgotPasswordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:gravity="center"
        android:text="@string/password_reset_instructions"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edtEmailForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/custom_input"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="#757272"
        android:textColorHint="#757272"
        android:textSize="14sp" />

    <ProgressBar
        android:id="@+id/progressFP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        android:visibility="gone" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnResetPassword"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_design"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_20sdp"
        android:weightSum="2">

        <TextView
            android:id="@+id/tvSignUpFP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/signup_now"
            android:textColor="#1E88E5"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLoginFP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/login_here"
            android:textColor="#1E88E5"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>