<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Activities.LoginActivity">


    <TextView

        android:id="@+id/changeLangLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/image_frame"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:drawableEndCompat="@drawable/language" />

    <!--    <TextView-->
    <!--        android:background="@drawable/image_frame"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_gravity="end"-->
    <!--        android:layout_marginTop="@dimen/_10sdp"-->
    <!--        android:layout_marginEnd="@dimen/_16sdp"-->
    <!--        android:layout_marginBottom="@dimen/_10sdp"-->
    <!--        android:drawableEnd="@drawable/language"-->
    <!--        android:padding="5dp"-->
    <!--        android:text="@string/change_language"-->
    <!--        android:textColor="@color/black"-->
    <!--        android:textSize="14sp" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_here"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/edtEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/custom_input"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="#757272"
            android:textColorHint="#757272"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/custom_input"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="#757272"
            android:textColorHint="#757272"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ProgressBar
            android:id="@+id/progressLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_design"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvSignUpF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/signup_now"
            android:textColor="#1E88E5"
            android:textSize="15sp"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>