<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Activities.SignUpActivity">


    <TextView
        android:id="@+id/SignUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="30sp" />

<!--    <EditText-->
<!--        android:id="@+id/edtNameSignUp"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="60dp"-->
<!--        android:layout_marginLeft="10dp"-->
<!--        android:layout_marginTop="30dp"-->
<!--        android:layout_marginRight="10dp"-->
<!--        android:background="@drawable/custom_input"-->
<!--        android:drawableLeft="@drawable/username"-->
<!--        android:drawablePadding="12dp"-->
<!--        android:ems="10"-->
<!--        android:hint="Name"-->
<!--        android:inputType="textPersonName"-->
<!--        android:paddingStart="12dp"-->
<!--        android:paddingEnd="12dp"-->
<!--        android:textColor="#757272"-->
<!--        android:textColorHint="#757272"-->
<!--        android:textSize="14sp" />-->

    <EditText
        android:id="@+id/edtEmailSignUp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/custom_input"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="#757272"
        android:textColorHint="#757272"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edtPasswordSignUp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/edtEmailSignUp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/custom_input"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="#757272"
        android:textColorHint="#757272"
        android:textSize="14sp" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressSignUp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:visibility="visible"
        android:id="@+id/btnSignUp"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/button_design"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/already_have_an_account"
        android:textColor="@color/black"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/login_here"
        android:textColor="#1E88E5"
        android:textSize="15sp"
        android:textStyle="bold" />

    <!--            grey color 424141-->


    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        android:visibility="gone" />


</LinearLayout>