<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/_60sdp"
    tools:context=".Fragments.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvYourProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/your_profile"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btnLogOutFP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="15dp"
            android:contentDescription="LogOut"
            android:src="@drawable/logout" />

        <RelativeLayout
            android:id="@+id/rl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_170sdp"
            android:layout_below="@id/tvYourProfile"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/pink">

            <RelativeLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageViewProfileFP"
                    android:layout_width="@dimen/_140sdp"
                    android:layout_height="@dimen/_140sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/avatar" />

                <ProgressBar
                    android:id="@+id/progressProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:indeterminateTint="@color/pink"
                    android:visibility="gone" />

            </RelativeLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/tvUD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/user_details"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!--        <View-->
        <!--            android:id="@+id/view0"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="@dimen/_1sdp"-->
        <!--            android:layout_below="@id/tvUD"-->
        <!--            android:layout_marginTop="@dimen/_8sdp"-->
        <!--            android:layout_marginStart="@dimen/_10sdp"-->
        <!--            android:layout_marginEnd="@dimen/_10sdp"-->
        <!--            android:background="#B6B6B6" />-->

        <TextView
            android:id="@+id/tvUsernameFP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvUD"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:drawableStart="@drawable/username"
            android:drawablePadding="@dimen/_10sdp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!--        <View-->
        <!--            android:id="@+id/view1"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="@dimen/_1sdp"-->
        <!--            android:layout_below="@id/tvUsernameFP"-->
        <!--            android:layout_marginStart="@dimen/_10sdp"-->
        <!--            android:layout_marginEnd="@dimen/_10sdp"-->
        <!--            android:background="#B6B6B6" />-->

        <TextView
            android:id="@+id/tvEmailFP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvUsernameFP"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:drawableStart="@drawable/email"
            android:drawablePadding="@dimen/_10sdp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!--        <View-->
        <!--            android:id="@+id/view2"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="@dimen/_1sdp"-->
        <!--            android:layout_below="@id/tvEmailFP"-->
        <!--            android:layout_marginStart="@dimen/_10sdp"-->
        <!--            android:layout_marginEnd="@dimen/_10sdp"-->
        <!--            android:background="#B6B6B6" />-->

        <TextView
            android:id="@+id/tvMobNumFP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvEmailFP"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:drawableStart="@drawable/call"
            android:drawablePadding="@dimen/_10sdp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!--        <View-->
        <!--            android:id="@+id/view3"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="@dimen/_1sdp"-->
        <!--            android:layout_below="@id/tvMobNumFP"-->
        <!--            android:layout_marginStart="@dimen/_10sdp"-->
        <!--            android:layout_marginEnd="@dimen/_10sdp"-->
        <!--            android:background="#B6B6B6" />-->

        <TextView
            android:id="@+id/tvUS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvMobNumFP"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!--        <View-->
        <!--            android:id="@+id/view4"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="@dimen/_1sdp"-->
        <!--            android:layout_below="@id/tvUS"-->
        <!--            android:layout_marginStart="@dimen/_10sdp"-->
        <!--            android:layout_marginEnd="@dimen/_10sdp"-->
        <!--            android:background="#B6B6B6" />-->

        <!--        <RelativeLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content">-->

        <TextView
            android:id="@+id/tvLanguageFP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvUS"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:drawableStart="@drawable/language"
            android:drawableEnd="@drawable/arrow"
            android:drawablePadding="@dimen/_10sdp"
            android:text="@string/language"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvEditProfileFP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLanguageFP"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:drawableStart="@drawable/edit"
            android:drawableEnd="@drawable/arrow"
            android:drawablePadding="@dimen/_10sdp"
            android:text="@string/edt_profile"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvChangePassProfileFP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvEditProfileFP"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:drawableStart="@drawable/lock"
            android:drawableEnd="@drawable/arrow"
            android:drawablePadding="@dimen/_10sdp"
            android:text="@string/change_password"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!--        </RelativeLayout>-->
        <!--        <androidx.appcompat.widget.AppCompatButton-->
        <!--            -->
        <!--            android:layout_width="@dimen/_160sdp"-->
        <!--            android:layout_height="@dimen/_40sdp"-->
        <!--            android:layout_below="@id/view3"-->
        <!--            android:layout_alignParentBottom="true"-->
        <!--            android:layout_centerHorizontal="true"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:layout_marginBottom="@dimen/_60sdp"-->
        <!--            android:background="@drawable/button_design"-->
        <!--            android:gravity="center"-->
        <!--            android:text="Log Out!"-->
        <!--            android:textColor="@color/white" />-->

        <!--    <View-->
        <!--        android:id="@+id/view4"-->
        <!--        android:layout_below="@id/btnLogOutFP"-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="1dp"-->
        <!--        android:layout_marginStart="10dp"-->
        <!--        android:layout_marginEnd="10dp"-->
        <!--        android:background="#B6B6B6" />-->

    </RelativeLayout>

</ScrollView>